force-app/main/default/objects/Participants__c/Participants__c.object-meta.xml
<CustomObject>
    <label>Participant</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>