force-app/main/default/objects/Participants__c/fields/Participant_Survey__c.field-meta.xml
<CustomField>
    <fullName>Participant_Survey__c</fullName>
    <label>Participant Survey</label>
    <type>Url</type>
</CustomField>