force-app/main/default/objects/Participants__c/fields/Training_Request__c.field-meta.xml
<CustomField>
    <fullName>Training_Request__c</fullName>
    <label>Training Request</label>
    <referenceTo>Training_Request__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>